--- a/index.html
+++ b/index.html
@@ -452,9 +452,14 @@
                 </div>
             </div>
             <div class="location-section">
+                <div class="section-header">
+                    <h2 class="section-title">Site Location</h2>
+                    <!-- <p class="section-subtitle">Star</p> -->
+                </div>
                
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.4547!2d72.0!3d33.0!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzPCsDAwJzAwLjAiTiA3MsKwMDAnMDAuMCJF!5e0!3m2!1sen!2s!4v1" frameborder="0" allowfullscreen></iframe>
+                    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.4547!2d72.0!3d33.0!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzPCsDAwJzAwLjAiTiA3MsKwMDAnMDAuMCJF!5e0!3m2!1sen!2s!4v1" frameborder="0" allowfullscreen></iframe> -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4234.409445679569!2d72.82040128070084!3d33.40517431454763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df8500457ec137%3A0x585987a9c8df9d04!2sDHA%20GANDHARA%20CITY%20ISLAMABAD!5e0!3m2!1sen!2s!4v1757242374463!5m2!1sen!2s" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
