Update team member information: changed name from Malik Faisal to Faisal H Nathoka and revised the member description to reflect updated experience and expertise in sales and digital marketing.

--- a/index.html
+++ b/index.html
@@ -333,10 +333,14 @@
                         
                     </div>
                     <div class="member-info">
-                        <h3>Malik Faisal</h3>
+                        <h3>Faisal H Nathoka</h3>
                         <p class="member-title">Head of Sales</p>
-                        <p class="member-description">Expert in premium property consultancy and client relations. With a deep understanding of market trends and investment opportunities, he ensures our clients make informed decisions about their DHA Gandhara file investments.</p>
-                    </div>
+                        <p class="member-description">I am an experienced Sales Executive with a passion
+                            for helping clients find their dream properties and
+                            guiding my team to achieve their targets. With over
+                            17 years of industry experience, I have a strong
+                            background in sales, relationship building, Digital
+                            Marketing, management, and strategic planning.</div>
                 </div>
             </div>
         </div>
