--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
                
                 <div class="map-container">
                     <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.4547!2d72.0!3d33.0!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzPCsDAwJzAwLjAiTiA3MsKwMDAnMDAuMCJF!5e0!3m2!1sen!2s!4v1" frameborder="0" allowfullscreen></iframe> -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4234.409445679569!2d72.82040128070084!3d33.40517431454763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df8500457ec137%3A0x585987a9c8df9d04!2sDHA%20GANDHARA%20CITY%20ISLAMABAD!5e0!3m2!1sen!2s!4v1757242374463!5m2!1sen!2s" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.72839472236!2d73.12876220000001!3d33.534446599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfed42d4361d75%3A0xfbc0bd5e85915f5a!2sGandhara%20Properties%20(Private)%20limited!5e0!3m2!1sen!2s!4v1757620945845!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4234.409445679569!2d72.82040128070084!3d33.40517431454763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df8500457ec137%3A0x585987a9c8df9d04!2sDHA%20GANDHARA%20CITY%20ISLAMABAD!5e0!3m2!1sen!2s!4v1757242374463!5m2!1sen!2s" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
                 </div>
             </div>
         </div>
