Update contact information link in index.html: replaced Google share link with a Google Maps link for improved accuracy in location access.

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                     <div class="contact-info">
                         <p><i class="fas fa-phone"></i> 03307770000 (UAN)</p>
                         <p><i class="fas fa-envelope"></i> Info@gandharaproperties</p>
-                        <p><i class="fas fa-map-marker-alt"></i> <a href="https://share.google/DA87OjPqnyewXgKYX" target="_blank" style="color: var(--primary-color); text-decoration: none;">View Location</a></p>
+                        <p><i class="fas fa-map-marker-alt"></i> <a href="https://maps.app.goo.gl/uzYiW1dKfjZZyXB47" target="_blank" style="color: var(--primary-color); text-decoration: none;">View Location</a></p>
                     </div>
                 </div>
             </div>
