Refine project description in index.html: removed specific mention of "5 Marla" from the residential villas description for a more general appeal while maintaining emphasis on luxury living and modern amenities.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Residential Villas</h3>
-                        <p>We are providing 5 Marla designer houses on 1.6 month installment. Experience luxury living with modern amenities and premium finishes in our exclusive residential community.</p>
+                        <p>We are providing designer houses on 1.6 month installment. Experience luxury living with modern amenities and premium finishes in our exclusive residential community.</p>
                     </div>
                 </div>
                 <div class="project-card" data-aos="fade-up" data-aos-delay="100">
