Update project details in index.html: swapped images and descriptions for "Land Provider" and "Residential Villas" to better reflect current offerings. Adjust footer styles in styles.css for improved visual consistency and updated color scheme. Replace binary image files for land providers and residential villas.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
             </div>
             <div class="projects-grid">
                 <div class="project-card" data-aos="fade-up">
+                    <div class="project-image" style="background-image: url('landProviders.jpg');">
+                        <div class="project-overlay">
+                            <a href="#" class="btn btn-outline">View Details</a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Land Provider</h3>
+                        <p>Our core business is providing land to house societies. We specialize in DHA Gandhara files, offering verified and authentic land opportunities for smart investors.</p>
+                    </div>
+                </div>
+                <div class="project-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-image" style="background-image: url('residentialVillas.jpg');">
                         <div class="project-overlay">
                             <a href="#" class="btn btn-outline">View Details</a>
@@ -151,7 +162,7 @@
                         <p>We are providing designer houses on 1.6 month installment. Experience luxury living with modern amenities and premium finishes in our exclusive residential community.</p>
                     </div>
                 </div>
-                <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+                <div class="project-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-image" style="background-image: url('premiumappartmetns.jpg');">
                         <div class="project-overlay">
                             <a href="#" class="btn btn-outline">View Details</a>
@@ -160,17 +171,6 @@
                     <div class="project-content">
                         <h3>Premium Apartments</h3>
                         <p>Successfully delivered premium apartments in the heart of Bahria Town Civic Center. High-rise living with panoramic mountain views and world-class modern amenities.</p>
-                    </div>
-                </div>
-                <div class="project-card" data-aos="fade-up" data-aos-delay="200">
-                    <div class="project-image" style="background-image: url('landProviders.jpg');">
-                        <div class="project-overlay">
-                            <a href="#" class="btn btn-outline">View Details</a>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Land Provider</h3>
-                        <p>Our core business is providing land to house societies. We specialize in DHA Gandhara files, offering verified and authentic land opportunities for smart investors.</p>
                     </div>
                 </div>
             </div>
@@ -583,7 +583,7 @@
                     <div class="contact-info">
                         <p><i class="fas fa-phone"></i> 03307770000 (UAN)</p>
                         <p><i class="fas fa-envelope"></i> Info@gandharaproperties</p>
-                        <p><i class="fas fa-map-marker-alt"></i> <a href="https://maps.app.goo.gl/uzYiW1dKfjZZyXB47" target="_blank" style="color: var(--primary-color); text-decoration: none;">View Location</a></p>
+                        <p><i class="fas fa-map-marker-alt"></i> <a href="https://maps.app.goo.gl/uzYiW1dKfjZZyXB47" target="_blank" style="color: var(--white); text-decoration: none;">View Location</a></p>
                     </div>
                 </div>
             </div>
